[ELM/HASKELL] Alteracoes temporarias no buscaFilme e autenticacao

--- a/ELM/cadastro-page.html
+++ b/ELM/cadastro-page.html
@@ -12,6 +12,8 @@
   <!--Import materialize.css-->
   <link type="text/css" rel="stylesheet" href="../static/css/materialize.css"  media="screen,projection"/>
   <link rel="stylesheet" href="../static/css/cadastro-page.css">
+  <link rel="stylesheet" href="../static/css/buscaFilme.css">
+
 </head>
 <body>
   <header>
