[ELM] MeusFilmes consumindo haskell

--- a/ELM/cadastro-page.html
+++ b/ELM/cadastro-page.html
@@ -22,7 +22,7 @@
         <a href="#" class="brand-logo">MovieDex</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="cadastro-page.html" >Home</a></li>
-          <li><a href="buscaFilme-page.html" class="btn green">Busca</a></li>
+          <!---<li><a href="buscaFilme-page.html" class="btn green">Busca</a></li>-->
         </ul>
       </div>
     </nav>
