[ELM] Mudanças visuais +1

--- a/ELM/cadastro-page.html
+++ b/ELM/cadastro-page.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>WebHaskell</title>
+  <title>Moviedex</title>
 
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -13,20 +13,11 @@
   <link type="text/css" rel="stylesheet" href="../static/css/materialize.css"  media="screen,projection"/>
   <link rel="stylesheet" href="../static/css/cadastro-page.css">
   <link rel="stylesheet" href="../static/css/buscaFilme.css">
+  <link rel="icon" href="../config/favicon.ico">
 
 </head>
 <body>
-  <header>
-    <nav>
-      <div class="nav-wrapper cyan">
-        <a href="#" class="brand-logo">MovieDex</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-          <li><a href="cadastro-page.html" >Home</a></li>
-          <!---<li><a href="buscaFilme-page.html" class="btn green">Busca</a></li>-->
-        </ul>
-      </div>
-    </nav>
-  </header>
+
 
   <main id="appMain">
   </main>
